--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
+    shield: crkbd_left
+    keymap: corne
   - board: nice_nano_v2
-    shield: corne_right
+    shield: crkbd_right
+    keymap: corne
