--- a/build.yaml
+++ b/build.yaml
@@ -20,8 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: crkbd_left
-    keymap: corne
+    shield: corne_left
   - board: nice_nano_v2
-    shield: crkbd_right
-    keymap: corne
+    shield: corne_right
