--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,3 @@
+# corne.conf mínimo
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
-CONFIG_DISPLAY=y
-CONFIG_SSD1306=y
-CONFIG_I2C=y
