--- a/build.yaml
+++ b/build.yaml
@@ -21,5 +21,7 @@
 include:
   - board: nice_nano_v2
     shield: corne_left
+    keymap: corne
   - board: nice_nano_v2
     shield: corne_right
+    keymap: corne
