--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,4 +1,17 @@
+# Display Configuration
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+
+# Split Keyboard
 CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+
+# OLED Displays
+CONFIG_DISPLAY=y
+CONFIG_SSD1306=y
+CONFIG_I2C=y
+
+# Performance
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
