--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,7 +6,7 @@ CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # Split Keyboard
-CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
+#CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 # OLED Displays
 CONFIG_DISPLAY=y
